--- a/week5/client/my-app/src/index.css
+++ b/week5/client/my-app/src/index.css
@@ -17,7 +17,7 @@ code {
 
 #name {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 80px;
+  font-size: 60px;
 }
 
 .bountyContainer {
@@ -25,29 +25,28 @@ code {
   color: yellow;
   text-align: center;
 }
-
 #addBountyForm {
   margin: 5px;
 }
 .toys {
-  width: 500px;
+  width: 800px;
   margin: 0;
 }
  .toystory {
-  width: 300px;
+  width: 600px;
   margin: 0;
 }
 
 .bounty {
   width: 80%;
   text-align: center;
-  color: yellow;
+  color: red;
   padding: 5px;
   margin: 25px auto;
 }
 
 .deleteButton {
-  background-color:yellow;
+  background-color:red;
   color: black;
   font-weight: bold;
   margin: 5px;
@@ -56,7 +55,7 @@ code {
 }
 
 .bountyButton {
-  background-color: yellow;
+  background-color: red;
   font-weight: bold;
   margin: 5px;
   padding: 3px;
